About section mobile fixes.

--- a/css/compiled_style.css
+++ b/css/compiled_style.css
@@ -444,7 +444,7 @@ video {
 }
 #about .about-container .text-container {
   background: rgb(18, 18, 18);
-  padding-bottom: 5vh;
+  padding-bottom: 10vh;
 }
 #about .about-container .phrase {
   font-family: "Atkinson Hyperlegible", serif;
