--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -47,7 +47,7 @@
 
     .text-container {
       background: $background;
-      padding-bottom: 5vh;
+      padding-bottom: 10vh;
     }
 
     .phrase {
